--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -5,3 +5,91 @@
     list-style: none;
     text-decoration: none;
 }
+
+
+.nav {
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.headline {
+    align-self: center;
+}
+
+.nav-links {
+    display: none
+}
+
+.hamburger {
+    appearance: none;
+    -webkit-appearance: none;
+    background: transparent;
+    border: 0;
+    padding: 0;
+    margin: 0;
+
+    color: inherit;
+    font: inherit;
+    line-height: 1;
+
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+
+    width: 44px;
+    height: 44px;
+    border-radius: 8px;
+
+    -webkit-tap-highlight-color: transparent;
+}
+
+/* OVERLAY */
+.overlay {
+    background-color: black;
+    position: fixed;
+    inset: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 1;
+    background: rgba(0, 0, 0, 0.75);
+    display: grid;
+    place-items: center;
+}
+
+.overlay-nav-links a {
+  color: #fff;
+  text-decoration: none;    
+  margin: 1rem;
+}
+
+.overlay-nav-links a:visited {
+  color: #fff;            
+}
+
+.overlay-nav-links {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+
+
+
+/***** BREAKPOINTS *****/
+
+/* Tablet View */
+@media (min-width: 768px) {
+
+}
+
+/* Desktop View */
+@media (min-width: 1024px) { 
+
+}
+
+
