--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -11,10 +11,10 @@
     padding: 1rem;
     display: flex;
     justify-content: space-between;
-
 }
 
 .headline {
+    /* visibility: hidden; */
     align-self: center;
 }
 
@@ -46,6 +46,8 @@
     -webkit-tap-highlight-color: transparent;
 }
 
+
+
 /* OVERLAY */
 .overlay {
     background-color: black;
@@ -57,6 +59,10 @@
     background: rgba(0, 0, 0, 0.75);
     display: grid;
     place-items: center;
+}
+
+.hide-overlay {
+    display: none;
 }
 
 .overlay-nav-links a {
@@ -76,6 +82,25 @@
     align-items: center;
 }
 
+.close-overlay {
+    position: absolute;
+    top: 10rem;
+    margin: 2rem;
+    font-size: 1.5rem;
+
+    appearance: none;
+    -webkit-appearance: none;
+    background: transparent;
+    border: 0;
+    padding: 0;
+
+    color: white;
+}
+
+.close-overlay:hover {
+    cursor: pointer;
+}
+
 
 
 
@@ -85,6 +110,31 @@
 /* Tablet View */
 @media (min-width: 768px) {
 
+    .headline {
+        visibility: visible;
+        align-self: center;
+    }
+
+    .nav-links-ham {
+        display: flex;
+    }
+
+    .nav-links {
+        display: flex;
+        align-items: center;
+    }
+
+    .nav-links div {
+        margin-left: 1rem;
+    }
+
+    .hamburger {
+        display: none;
+    }
+
+   
+    
+    
 }
 
 /* Desktop View */
