main nav bar complete and responsive

--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -124,12 +124,23 @@
         align-items: center;
     }
 
-    .nav-links div {
+    .nav-links a {
         margin-left: 1rem;
+        text-decoration: none;
+        color: black
+    }
+
+     .nav-links a:visited {
+        margin-left: 1rem;
+        text-decoration: none;
     }
 
     .hamburger {
         display: none;
+    }
+
+    .nav {
+        padding: 2rem;
     }
 
    
