--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -124,17 +124,17 @@ body::before { animation-duration: 6s; }
 }
 
 .overlay-nav-links a {
-  color: #fff;
+  color: rgba(255, 255, 255, 0.718);
   text-decoration: none;    
   margin: 1rem;
 }
 
 .overlay-nav-links a:visited {
-  color: #fff;            
+  color: rgba(255, 255, 255, 0.718);           
 }
 
 .overlay-nav-links {
-    color: white;
+    color: rgba(255, 255, 255, 0.718);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -151,12 +151,17 @@ body::before { animation-duration: 6s; }
     background: transparent;
     border: 0;
     padding: 0;
-
-    color: white;
+    color: rgba(255, 255, 255, 0.718);
 }
 
 .close-overlay:hover {
     cursor: pointer;
+}
+
+.close-overlay img {
+    width: 30px;
+    color: rgba(255, 255, 255, 0.718);
+    filter: invert(1);
 }
 
 
@@ -220,7 +225,7 @@ h1 {
   --peek: 14px;                          /* how much of each card stays visible */
   display: grid;
   gap: 1vh;
-  padding-block: 20vh 40vh;
+  padding-block: 5vh 40vh;
   isolation: isolate;                    /* keep z-index local */
 
   max-width: 1400px;    /* pick your width */
