--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -336,7 +336,8 @@ h1 {
     --speed: 60s;
     overflow: hidden;
     mask-image: linear-gradient(to right, transparent, black 25%, black 90%, transparent);
-    max-width: 1100px;
+    width: 85%;
+    max-width: 1000px;
     margin: auto;
 }
 
@@ -346,6 +347,8 @@ h1 {
     width: max-content;
     animation: orbit-scroll var(--speed) linear infinite;
     will-change: transform;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
 }
 
 .orbit__track:hover {
@@ -423,7 +426,6 @@ h1 {
     .nav-links {
         display: flex;
         align-items: center;
-
     }
 
     .nav-links a {
@@ -444,6 +446,8 @@ h1 {
     .nav {
         padding: 2rem;
         font-size: large;
+        width: 93%;
+        max-width: 1050px;
     }
 
     .thumbnail {
