description added to project summary

--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -429,9 +429,14 @@ h1 {
     }
 
     .nav-links a {
-        margin-left: 1rem;
+        margin-left: 2rem;
         text-decoration: none;
         color: rgba(255, 255, 255, 0.482)
+    }
+
+    .nav-links a:hover {
+        text-decoration: none;
+        color: whitesmoke;
     }
 
     .nav-links a:visited {
